--- a/views/views.xml
+++ b/views/views.xml
@@ -162,6 +162,24 @@
       </field>
     </record>
 
+    <!-- <record id="act_bing" model="ir.actions.act_url">
+      <field name="name">打开bing网页</field>
+      <field name="target">new</field>
+      <field name="url">http://www.bing.com</field>
+    </record>
+
+    <record id="act_todo" model="ir.actions.todo">
+      <field name="action_id" ref="act_bing"/>
+      <field name="state">open</field>
+      <field name="sequence">1</field>
+      <field name="type">automatic</field>
+    </record> -->
+
+    <record id="act_bing" model="ir.actions.client">
+      <field name="name">打开Bing</field>
+      <field name="tag">web.bing</field>
+    </record>
+
     <!-- Top menu item -->
 
     <menuitem name="浪矢书店" id="book_store.menu_root"/>
@@ -172,6 +190,9 @@
     <menuitem name="电子图书" id="book_store.emenu_book" action="book_store.eaction_window" parent="book_store.menu_root"/>
     <menuitem name="会员图书" id="book_store.smenu_book" action="book_store.saction_window" parent="book_store.menu_root"/>
     <menuitem name="分类" id="book_store.menu_category" parent="book_store.menu_root"/>
+    <menuitem name="打开Bing" id="book_store.menu_open_bing" action="act_bing" parent="book_store.menu_root"/>
+
+
 
     <!-- actions -->
     <!--
