[IMP]change to 15.0

--- a/views/views.xml
+++ b/views/views.xml
@@ -19,20 +19,15 @@
       <field name="name">图书</field>
       <field name="model">book_store.book</field>
       <field name="arch" type="xml">
-        <form string="图书详情" class="">
-          <header>
-            <button type="object" name="btn_test" string="测试按钮"/>
-          </header>
+        <form string="图书详情">
           <sheet>
             <h1>
-              <field name="name" invisible="0"/>
+              <field name="name"/>
             </h1>
             <group>
-              <field name="author" invisible="0"/>
-              <field name="date" invisible="0"/>
-              <field name="price" invisible="0"/>
-              <field name="age" invisible="0"/>
-              <field name="ref" invisible="0"/>
+              <field name="author"/>
+              <field name="date"/>
+              <field name="price"/>
             </group>
           </sheet>
         </form>
@@ -48,156 +43,12 @@
       <field name="view_mode">tree,form</field>
     </record>
 
-    <record model="ir.ui.view" id="book_store.elist">
-      <field name="name">电子图书列表</field>
-      <field name="model">book_store.ebook</field>
-      <field name="arch" type="xml">
-        <tree>
-          <field name="name"/>
-          <field name="author"/>
-          <field name="date"/>
-          <field name="price"/>
-        </tree>
-      </field>
-    </record>
-
-    <record id="book_store.ebook_form" model="ir.ui.view">
-      <field name="name">电子图书</field>
-      <field name="model">book_store.ebook</field>
-      <field name="arch" type="xml">
-        <form string="图书详情" class="">
-          <sheet>
-            <h1>
-              <field name="name" invisible="0"/>
-            </h1>
-            <group>
-              <field name="author" invisible="0"/>
-              <field name="date" invisible="0"/>
-              <field name="price" invisible="0"/>
-              <field name="ref" invisible="0"/>
-            </group>
-          </sheet>
-        </form>
-      </field>
-    </record>
-
-    <record model="ir.actions.act_window" id="book_store.eaction_window">
-      <field name="name">电子图书</field>
-      <field name="res_model">book_store.ebook</field>
-      <field name="view_mode">tree,form</field>
-    </record>
-
-    <record model="ir.ui.view" id="book_store.slist">
-      <field name="name">会员图书列表</field>
-      <field name="model">book_store.sbook</field>
-      <field name="arch" type="xml">
-        <tree>
-          <field name="name"/>
-          <field name="author"/>
-          <field name="date"/>
-          <field name="price"/>
-        </tree>
-      </field>
-    </record>
-
-    <record id="book_store.sbook_form" model="ir.ui.view">
-      <field name="name">会员图书</field>
-      <field name="model">book_store.sbook</field>
-      <field name="arch" type="xml">
-        <form string="图书详情" class="">
-          <sheet>
-            <h1>
-              <field name="name" invisible="0"/>
-            </h1>
-            <group>
-              <field name="ebook_id"/>
-              <field name="author" invisible="0"/>
-              <field name="date" invisible="0"/>
-              <field name="price" invisible="0"/>
-              <field name="ref" invisible="0"/>
-            </group>
-          </sheet>
-        </form>
-      </field>
-    </record>
-
-    <record model="ir.actions.act_window" id="book_store.saction_window">
-      <field name="name">会员图书</field>
-      <field name="res_model">book_store.sbook</field>
-      <field name="view_mode">tree,form</field>
-    </record>
-
-
-    <!-- server action to the one above -->
-    <!--
-    <record model="ir.actions.server" id="book_store.action_server">
-      <field name="name">book_store server</field>
-      <field name="model_id" ref="model_book_store_book_store"/>
-      <field name="state">code</field>
-      <field name="code">
-        action = {
-          "type": "ir.actions.act_window",
-          "view_mode": "tree,form",
-          "res_model": self._name,
-        }
-      </field>
-    </record>
-    -->
-
-    <record id="book_store_search_view" model="ir.ui.view">
-      <field name="name">图书搜索</field>
-      <field name="model">book_store.book</field>
-      <field name="arch" type="xml">
-        <search string="图书搜索">
-          <field name="author"/>
-          <field name="date"/>
-          <field name="price"/>
-          <separator/>
-          <filter name="liu_book" string="大刘小说" domain="[('author','=','刘慈欣')]" />
-          <separator/>
-          <group expand="0" string="Group By">
-            <filter name="author" string="按作者分组" domain="[]" context="{'group_by':'author'}"/>
-          </group>
-        </search>
-      </field>
-    </record>
-
-    <!-- <record id="act_bing" model="ir.actions.act_url">
-      <field name="name">打开bing网页</field>
-      <field name="target">new</field>
-      <field name="url">http://www.bing.com</field>
-    </record>
-
-    <record id="act_todo" model="ir.actions.todo">
-      <field name="action_id" ref="act_bing"/>
-      <field name="state">open</field>
-      <field name="sequence">1</field>
-      <field name="type">automatic</field>
-    </record> -->
-
-    <record id="act_bing" model="ir.actions.client">
-      <field name="name">打开Bing</field>
-      <field name="tag">web.bing</field>
-    </record>
 
     <!-- Top menu item -->
-
-    <menuitem name="西西弗斯书店" id="book_store.menu_root"/>
+    <menuitem name="西西弗斯书店" id="book_store.menu_root" web_icon="book_store,static/description/icon.png"/>
 
     <!-- menu categories -->
 
     <menuitem name="图书" id="book_store.menu_book" action="book_store.action_window" parent="book_store.menu_root"/>
-    <menuitem name="电子图书" id="book_store.emenu_book" action="book_store.eaction_window" parent="book_store.menu_root"/>
-    <menuitem name="会员图书" id="book_store.smenu_book" action="book_store.saction_window" parent="book_store.menu_root"/>
-    <menuitem name="分类" id="book_store.menu_category" parent="book_store.menu_root"/>
-    <menuitem name="打开Bing" id="book_store.menu_open_bing" action="act_bing" parent="book_store.menu_root"/>
-
-
-
-    <!-- actions -->
-    <!--
-    <menuitem name="List" id="book_store.menu_1_list" parent="book_store.menu_1" action="book_store.action_window"/>
-    <menuitem name="Server to list" id="book_store" parent="book_store.menu_2" action="book_store.action_server"/>
-    -->
   </data>
 </odoo>
